pages. local cache of resources. CSS now in SCSS.

--- a/_pages/thesis/thesis_abstract.html
+++ b/_pages/thesis/thesis_abstract.html
@@ -1,8 +1,10 @@
 ---
+permalink: thesis/abstract/
 layout: page
 title:  "Prediction of NMR J-coupling in condensed matter"
 date:   2014-10-03
 categories: page
+navorder: 1
 ---
 
 <h1>Prediction of NMR J-coupling in condensed matter</h2>
