reworked css stuff

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 permalink: /
 layout: default
 title: Tim Green
+css: main.css
 ---
 
 <div class="container">
@@ -14,7 +15,7 @@ title: Tim Green
           <p>A leading <abbr title="density functional theory">DFT</abbr> code for the calculation of a wide rage of material properties. I am a contributor to the core and the <abbr title="nuclear magnetic resonance">NMR</abbr> module, CASTEP-NMR.</p>
         </li>
         <li>
-          <a class='link' href='https://github.com/tfgg/magres-format' target="_blank">MagresPython</a>
+          <a class='link' href='/magres-python/'>MagresPython</a>
           <p>A library for processing the output of <em>ab-initio</em> magnetic resonance calculations.</p>
         </li>
         <li>
@@ -45,7 +46,7 @@ title: Tim Green
 
       <p class='block-highlight'>I am a post-doctoral research assistant at the <a href='http://www.ox.ac.uk/' target="_blank">University of Oxford</a> in the <a href='http://mml.materials.ox.ac.uk/' target="_blank">Materials Modelling Laboratory</a>.
 
-      <p>I also did my Ph.D. thesis here in Oxford with <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a>, titled <em><a href='_pages/thesis_abstract.html'>Prediction of NMR J-coupling in condensed matter</a></em>.</p>
+      <p>I also did my Ph.D. thesis here in Oxford with <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a>, titled <em><a href='/thesis/abstract/'>Prediction of NMR J-coupling in condensed matter</a></em>.</p>
 
       <p>My research interests include computational materials science, density functional theory, quantum chemistry, condensed matter and nuclear magnetic resonance.</p>
 
