update front page

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ css: main.css
           <p>A comprehensive and open database of candidates who stood in the 2014 European Parliament elections in the UK, online at <a href='http://www.yournextmep.com'>yournextmep.com</a>.</p>
         </li>
         <li>
-          <a class='link' href='https://code.google.com/p/constituencyvolunteernetwork/' target="_blank">Democracy Club</a>
-          <p>The remnants of the code of a voter engagement and crowdsourcing project during the 2010 General Election. It's being restarted for 2015 by new volunteers at <a href='http://democracyclub.org.uk/'>democracyclub.org.uk</a>.</p> 
+          <a class='link' href='http://democracyclub.org.uk/' target="_blank">Democracy Club</a>
+          <p>A voter engagement and crowdsourcing project <a href="https://code.google.com/p/constituencyvolunteernetwork/" target="_blank">I worked on</a> during the 2010 General Election. Restarted for 2015 by new volunteers!</p> 
         </li>
       </ul>
     </div>
