--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@ css: main.css
       <h2>Recent and upcoming talks</h2>
       <ul class='publications'>
         <li>
-          <strong>Ab-initio investigation of dynamics and J-coupling in Pb<sub>2</sub>ZnF<sub>6</sub></strong><br/>
+          <strong>Helping citizens to better understand the General Election with online democratic tools.</strong> <a href='/files/mysocial_january_2015.pdf'>slides</a><br/>
+          <a href='http://lanyrd.com/2015/mysocial/'>#mysocial</a>, Jam Factory, Oxford, 7<sup>th</sup> January 2015.
+        </li>
+        <li>
+          <strong>Ab-initio investigation of dynamics and J-coupling in Pb<sub>2</sub>ZnF<sub>6</sub>.</strong><br/>
           <a href='http://www.ccpnc.ac.uk/smarter4'>SMARTER4</a>, University of Durham, 3<sup>rd</sup> September 2014.
         </li>
         <li>
-          <strong>Calculating J-couplings with Ultrasoft Potentials and Relativistic Effects</strong><br/>
+          <strong>Calculating J-couplings with Ultrasoft Potentials and Relativistic Effects.</strong><br/>
           <a href='http://www2.warwick.ac.uk/fac/sci/physics/research/condensedmatt/nmr/conference_january2014/'>NMR Crystallography: Combining Experiment and Calculation</a>, University of Warwick, 14<sup>th</sup> January 2014.
         </li>
       </ul>
