fiddle with right column style

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ css: main.css
       </ul>
     </div>
 
-    <div class="col-md-3">
+    <div class="col-md-3 col-right">
       <img src='images/my_face.jpg' class='my_face' width="200"/>
       <h3>E-mail</h3>
       <p>
