add cambridge talk

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ css: main.css
       <h2>Recent and upcoming talks</h2>
       <ul class='publications'>
         <li>
-          <strong>TBA</strong><br/>
+          <strong>Prediction of NMR J-coupling in condensed matter</strong><br/>
           <a href='http://www.tcm.phy.cam.ac.uk/~mdt26/esdg.html'>ESDG</a>, TCM, Cavendish Laboratory, Cambridge, 22<sup>nd</sup> April 2015.
         </li>
         <li>
