Redesign front page

--- a/index.html
+++ b/index.html
@@ -5,59 +5,58 @@ title: Tim Green
 css: main.css
 ---
 
-<div class="container">
+<div class="container index">
   <div class="row">
-    <div class="col-md-4">
-      <h2>Academic projects</h2>
-      <ul class='projects github'>
-        <li>
-          <a class='link' href='http://www.castep.org/' target="_blank">CASTEP</a>
-          <p>A leading <abbr title="density functional theory">DFT</abbr> code for the calculation of a wide rage of material properties. I am a contributor to the core and the <abbr title="nuclear magnetic resonance">NMR</abbr> module, CASTEP-NMR.</p>
-        </li>
-        <li>
-          <a class='link' href='/magres-python/'>MagresPython</a>
-          <p>A library for processing the output of <em>ab-initio</em> magnetic resonance calculations.</p>
-        </li>
-        <li>
-          <a class='link' href='https://github.com/tfgg/castepy' target="_blank">Castepy</a>
-          <p>A library for generating the input files and processing the output files of <a href='http://www.castep.org/'>CASTEP</a> calculations.</p>
-        </li>
-        <li>
-          <a class='link' href='https://github.com/ccp9-community' target="_blank">Electronic structure picks</a>
-          <p>An attempt at curating a list of github projects relating to electronic structure.</p>
-        </li>
-      </ul>
-
-      <h2>Other projects</h2>
-      <ul class='projects github'>
-        <li>
-          <a class='link' href='https://github.com/tfgg/yournextmep' target="_blank">YourNextMEP</a>
-          <p>A comprehensive and open database of candidates who stood in the 2014 European Parliament elections in the UK, online at <a href='http://www.yournextmep.com'>yournextmep.com</a>.</p>
-        </li>
-        <li>
-          <a class='link' href='http://democracyclub.org.uk/' target="_blank">Democracy Club</a>
-          <p>A voter engagement and crowdsourcing project <a href="https://code.google.com/p/constituencyvolunteernetwork/" target="_blank">I worked on</a> during the 2010 General Election. Restarted for 2015 by new volunteers!</p> 
-        </li>
-      </ul>
+    <div class="col-md-2 logoface">
+      <img src='images/my_face.jpg' class='my_face'/>
     </div>
-
-    <div class="col-md-5">
+    <div class="col-md-8">
       <h1>Tim Green</h1>
+      <ul class='links'>
+        <li><a href='mailto:timothy.green@gmail.com'>Email</a></li>
+        <li><a href='http://twitter.com/tfgg2'>Twitter</a></li>
+        <li><a href='http://github.com/tfgg'>GitHub</a></li>
+        <div style='clear:both;'></div>
+      </ul>
 
       <p class='block-highlight'>I am a post-doctoral research assistant at the <a href='http://www.ox.ac.uk/' target="_blank">University of Oxford</a> in the <a href='http://mml.materials.ox.ac.uk/' target="_blank">Materials Modelling Laboratory</a>.
 
-      <p>I also did my Ph.D. thesis here in Oxford with <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a>, titled <em><a href='/thesis/abstract/'>Prediction of NMR J-coupling in condensed matter</a></em>.</p>
+      <p>I also did my Ph.D. thesis work here in Oxford with <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a>, entitled <em><a href='/thesis/abstract/'>Prediction of NMR J-coupling in condensed matter</a></em>.</p>
 
       <p>My research interests include computational materials science, density functional theory, quantum chemistry, condensed matter and nuclear magnetic resonance.</p>
+
+      <h2>Academic code</h2>
+
+      <h3>CASTEP</h3>
+      <p><a class='link' href='http://www.castep.org/' target="_blank">CASTEP</a> is a leading <abbr title="density functional theory">DFT</abbr> code for the calculation of a wide rage of material properties. I am a contributor to the core and the <abbr title="nuclear magnetic resonance">NMR</abbr> module, CASTEP-NMR.</p>
+
+      <h3>MagresPython</h3>
+      <p><a class='link' href='/magres-python/'>MagresPython</a> is a library for processing the output of <em>ab-initio</em> magnetic resonance calculations. This is based on the <a href='http://www.ccpnc.ac.uk/pmwiki.php/CCPNC/Fileformat'>CCP-NC Magres file format</a>, which I developed with my supervisor during my thesis. The goal was to unify the output format of scientific software that calculates NMR parameters into a single, very simple format, allowing shared development of further tooling.</p>
+
+      <h3>Castepy</h3>
+      <p><a class='link' href='https://github.com/tfgg/castepy' target="_blank">Castepy</a> is a library for generating the input files and processing the output files of <a href='http://www.castep.org/'>CASTEP</a> calculations.</p>
+
+      <h2>Other projects</h2>
+
+      <h3>Democracy Club</h3>
+      <p><a class='link' href='http://democracyclub.org.uk/' target="_blank">Democracy Club</a> is a non-partisan voter engagement, micro-volunteering and crowdsourcing project that I helped co-found for the 2010 UK General Election, collaborating with a number of other websites to improve accountability and voter information.</p>
+
+      <p>It was restarted by a new group for the 2015 UK General Election as an umbrella project for non-partisan websites such as <a href='https://www.yournextmp.com/'>YourNextMP</a>, which crowdsourced the only openly licensed database (CC-BY-SA) of candidates.</p>
+
+      <p>For 2015, I helped gather data, wrote code and personally ran <a href='https://www.electionmentions.com/'>ElectionMentions</a>, which uses the candidate database to track mentions of candidates in the national and local press. In addition, I also ran <a href='http://www.yournextpcc.com/'>YourNextPCC</a> (2012) and <a href='http://www.yournextmep.com/'>YourNextMEP</a> (2014) for the Police and Crime Commissioner and European Parliament elections, respectively.</p>
 
       <h2>Publications</h2>
       <ul class='publications'>
         <li>
+            <strong>Unusual Intermolecular “Through-Space” J Couplings in P–Se Heterocycles</strong> <a href='http://pubs.acs.org/doi/abs/10.1021/jacs.5b03353'>journal</a><br/>
+            Paula S. Camacho, Kasun S. A. Arachchige, Alexandra M. Z. Slawin, <span class='me'>Timothy F. G. Green</span>, Jonathan R. Yates, Daniel M. Dawson, John D. Woollins and Sharon E. Ashbrook. <em>J. Am. Chem. Soc.</em>, 2015, 137 (19), 6172&ndash;6175</li>
+        </li>
+        <li>
           <strong>Relativistic nuclear magnetic resonance J-coupling with ultrasoft pseudopotentials and the zeroth-order regular approximation.</strong> <a href='http://scitation.aip.org/content/aip/journal/jcp/140/23/10.1063/1.4882678'>journal</a> <a href='http://arxiv.org/abs/1403.0524'>arXiv</a><br/>
-          Timothy F. G. Green and Jonathan R. Yates. <em>J. Chem. Phys.</em>, 2014, 140, 234106</li>
+          <span class='me'>Timothy F. G. Green</span> and Jonathan R. Yates. <em>J. Chem. Phys.</em>, 2014, 140, 234106</li>
         <li>
           <strong>Elucidation of the Al/Si Ordering in Gehlenite Ca<sub>2</sub>Al<sub>2</sub>SiO<sub>7</sub> by Combined <sup>29</sup>Si and <sup>27</sup>Al NMR Spectroscopy/Quantum Chemical Calculations.</strong> <a href='http://pubs.acs.org/doi/full/10.1021/cm3016935'>journal</a><br/>
-          Pierre Florian, Emmanuel Veron, Timothy F. G. Green, Jonathan R. Yates, and Dominique Massiot. <em>Chem. Mater.</em>, 2012, 24 (21), 4068-4079
+          Pierre Florian, Emmanuel Veron, <span class='me'>Timothy F. G. Green</span>, Jonathan R. Yates, and Dominique Massiot. <em>Chem. Mater.</em>, 2012, 24 (21), 4068&ndash;4079
         </li>
       </ul>
 
@@ -81,32 +80,6 @@ css: main.css
         </li>
       </ul>
     </div>
-
-    <div class="col-md-3 col-right">
-      <img src='images/my_face.jpg' class='my_face' width="200"/>
-      <h3>E-mail</h3>
-      <p>
-        <a href='mailto:timothy.green@gmail.com'>timothy.green@gmail.com</a>
-      </p>
-      <h3>Twitter</h3>
-      <p>
-        <a target='_blank' href='http://twitter.com/tfgg2'>@tfgg2</a>
-      </p>
-      <h3>Github</h3>
-      <p>
-        <a target='_blank' href='http://github.com/tfgg'>tfgg</a>
-      </p>
-      <h3>Post</h3>
-      <p><address>
-        Department of Materials<br/>
-        University of Oxford<br/>
-        Parks Road<br/>
-        Oxford OX1 3PH<br/>
-        UK
-      </address></p>
-    </div>
-
-
   </div>
 </div>
 
