--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@ css: main.css
   <div class="row">
     <div class="col-md-2 logoface">
       <img src='images/my_face.jpg' class='my_face'/>
+      <ul id='leftnav'>
+        <li><a href='/magres-python/'>MagresPython</a></li>
+        <li><a href='https://www.electionmentions.com/'>ElectionMentions</a></li>
+      </ul>
     </div>
     <div class="col-md-8">
       <h1>Tim Green</h1>
