another attempt at getting mdash right

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ css: main.css
 
       <p>It was restarted by a new group for the 2015 UK General Election as an umbrella project for non-partisan websites such as <a href='https://www.yournextmp.com/'>YourNextMP</a>, which crowdsourced the only openly licensed database (CC-BY-SA) of candidates.</p>
 
-      <p>For 2015, I helped gather data, administer things and write code. I personally ran my experimental website, <a href='https://www.electionmentions.com/'>ElectionMentions</a>, which uses the candidate database to track mentions of candidates in the national and local press &emdash; hoping to provide voters with better information about who their candidates are, what they've done, and what they've said.</p>
+      <p>For 2015, I helped gather data, administer things and write code. I personally ran my experimental website, <a href='https://www.electionmentions.com/'>ElectionMentions</a>, which uses the candidate database to track mentions of candidates in the national and local press &mdash; hoping to provide voters with better information about who their candidates are, what they've done, and what they've said.</p>
 
       <p>In previous years, I also ran <a href='http://www.yournextpcc.com/'>YourNextPCC</a> (2012) and <a href='http://www.yournextmep.com/'>YourNextMEP</a> (2014) gathering candidate data for the Police and Crime Commissioner and European Parliament elections, respectively.</p>
 
