--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@ css: main.css
         <li><a href='mailto:timothy.green@gmail.com'>Email</a></li>
         <li><a href='http://twitter.com/tfgg2'>Twitter</a></li>
         <li><a href='http://github.com/tfgg'>GitHub</a></li>
+        <li><a href='/cv.pdf'>CV</a></li>
         <div style='clear:both;'></div>
       </ul>
 
-      <p class='block-highlight'>I am a post-doctoral research assistant at the <a href='http://www.ox.ac.uk/' target="_blank">University of Oxford</a> in the <a href='http://mml.materials.ox.ac.uk/' target="_blank">Materials Modelling Laboratory</a>.
+      <p class='block-highlight'>Until recently, I was a post-doctoral research assistant at the <a href='http://www.ox.ac.uk/' target="_blank">University of Oxford</a> in the <a href='http://mml.materials.ox.ac.uk/' target="_blank">Materials Modelling Laboratory</a>.
 
       <p>I also did my Ph.D. thesis work here in Oxford with <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a>, entitled <em><a href='/thesis/abstract/'>Prediction of NMR J-coupling in condensed matter</a></em>.</p>
 
