update front page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ css: main.css
         <div style='clear:both;'></div>
       </ul>
 
-      <p class='block-highlight'>Until recently, I was a post-doctoral research assistant at the <a href='http://www.ox.ac.uk/' target="_blank">University of Oxford</a> in the <a href='http://mml.materials.ox.ac.uk/' target="_blank">Materials Modelling Laboratory</a>.
+      <p class='block-highlight'>I'm an academic escapee. Until recently, I was a post-doctoral research assistant at the <a href='http://www.ox.ac.uk/' target="_blank">University of Oxford</a> in the <a href='http://mml.materials.ox.ac.uk/' target="_blank">Materials Modelling Laboratory</a>.
 
       <p>I also did my Ph.D. thesis work here in Oxford with <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a>, entitled <em><a href='/thesis/abstract/'>Prediction of NMR J-coupling in condensed matter</a></em>.</p>
 
