--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@ css: main.css
       <h1>Tim Green</h1>
       <ul class='links'>
         <li><a href='mailto:timothy.green@gmail.com'>Email</a></li>
+        <li><a href='/cv.pdf'>CV</a></li>
         <li><a href='http://twitter.com/tfgg2'>Twitter</a></li>
         <li><a href='http://github.com/tfgg'>GitHub</a></li>
-        <li><a href='/cv.pdf'>CV</a></li>
+        <li><a href='https://uk.linkedin.com/in/tim-green-6832886'>LinkedIn</a></li>
         <div style='clear:both;'></div>
       </ul>
 
