add citizenbeta slides

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ css: main.css
       <h2>Recent and upcoming talks</h2>
       <ul class='publications'>
         <li>
-            <strong>The case for unique election identifiers</strong><br/>
-            <a href='http://citizenbeta.attending.io/events/citizenbeta006'>Citizen Beta</a>, 133 Bethnal Green Rd, London, 7 PM, 2<sup>nd</sup> December 2015.
+            <strong>Every election is unique(ly identified)</strong> <a href='/files/citizenbeta_december_2015.pdf'>slides</a><br/>
+            <a href='http://citizenbeta.attending.io/events/citizenbeta006'>Citizen Beta</a>, <a href='https://twitter.com/nwspk'>Newspeak House</a>, 133 Bethnal Green Rd, London, 7 PM, 2<sup>nd</sup> December 2015.
         <li>
           <strong>Prediction of NMR J-coupling in condensed matter</strong><br/>
           <a href='http://www.tcm.phy.cam.ac.uk/~mdt26/esdg.html'>ESDG</a>, TCM, Cavendish Laboratory, University of Cambridge, 22<sup>nd</sup> April 2015.
