update front page

--- a/index.html
+++ b/index.html
@@ -25,35 +25,13 @@ css: main.css
         <div style='clear:both;'></div>
       </ul>
 
-      <p class='block-highlight'>I'm an academic escapee. Until recently, I was a post-doctoral research assistant at the <a href='http://www.ox.ac.uk/' target="_blank">University of Oxford</a> in the <a href='http://mml.materials.ox.ac.uk/' target="_blank">Materials Modelling Laboratory</a>.
+      <p class='block-highlight'>I'm an academic escapee. Until recently I was a post-doctoral research assistant at the <a href='http://www.ox.ac.uk/' target="_blank">University of Oxford</a> in the <a href='http://mml.materials.ox.ac.uk/' target="_blank">Materials Modelling Laboratory</a>.
 
-      <p>I also did my Ph.D. thesis work in Oxford with <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a>, entitled <em><a href='/thesis/abstract/'>Prediction of NMR J-coupling in condensed matter</a></em>.</p>
+      <p>I did my Ph.D. thesis work in Oxford with <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a>, entitled <em><a href='/thesis/abstract/'>Prediction of NMR J-coupling in condensed matter</a></em>.</p>
 
       <p>My academic research interests include computational materials science, density functional theory, quantum chemistry, condensed matter and nuclear magnetic resonance.</p>
 
       <p>I also work on projects that seek to enhance democracy in the UK, generally trying to bring it into the 21<sup>st</sup> century! Recently this has included helping with <a href='https://www.yournextmp.com/'>YourNextMP</a> and personally building <a href='https://www.electionmentions.com'>ElectionMentions</a>, which has also doubled as a platform for trying to understand practical natural languge processing and machine learning.</p>
-
-      <h2>Academic code</h2>
-
-      <h3>CASTEP</h3>
-      <p><a class='link' href='http://www.castep.org/' target="_blank">CASTEP</a> is a leading <abbr title="density functional theory">DFT</abbr> code for the calculation of a wide rage of material properties. I am a contributor to the core and the <abbr title="nuclear magnetic resonance">NMR</abbr> module, CASTEP-NMR.</p>
-
-      <h3>MagresPython</h3>
-      <p><a class='link' href='/magres-python/'>MagresPython</a> is a library for processing the output of <em>ab-initio</em> magnetic resonance calculations. This is based on the <a href='http://www.ccpnc.ac.uk/pmwiki.php/CCPNC/Fileformat'>CCP-NC Magres file format</a>, which I developed with my supervisor during my thesis. The goal was to unify the output format of scientific software that calculates NMR parameters into a single, very simple format, allowing shared development of further tooling.</p>
-
-      <h3>Castepy</h3>
-      <p><a class='link' href='https://github.com/tfgg/castepy' target="_blank">Castepy</a> is a library for generating the input files and processing the output files of <a href='http://www.castep.org/'>CASTEP</a> calculations.</p>
-
-      <h2>Other projects</h2>
-
-      <h3>Democracy Club</h3>
-      <p><a class='link' href='http://democracyclub.org.uk/' target="_blank">Democracy Club</a> is a non-partisan voter engagement, micro-volunteering and crowdsourcing project that I helped co-found for the 2010 UK General Election, collaborating with a number of other websites to improve accountability and voter information.</p>
-
-      <p>It was restarted by a new group for the 2015 UK General Election as an umbrella project for non-partisan websites such as <a href='https://www.yournextmp.com/'>YourNextMP</a>, which crowdsourced the only openly licensed database (CC-BY-SA) of candidates.</p>
-
-      <p>For 2015, I helped gather data, administer things and write code. I personally ran my experimental website, <a href='https://www.electionmentions.com/'>ElectionMentions</a>, which uses the candidate database to track mentions of candidates in the national and local press &mdash; hoping to provide voters with better information about who their candidates are, what they've done, and what they've said.</p>
-
-      <p>In previous years, I also ran <a href='http://www.yournextpcc.com/'>YourNextPCC</a> (2012) and <a href='http://www.yournextmep.com/'>YourNextMEP</a> (2014) gathering candidate data for the Police and Crime Commissioner and European Parliament elections, respectively.</p>
 
       <h2>Posts</h2>
       <ul class='publications'>
@@ -83,7 +61,33 @@ css: main.css
           <strong>Calculating J-couplings with Ultrasoft Potentials and Relativistic Effects</strong><br/>
           <a href='http://www2.warwick.ac.uk/fac/sci/physics/research/condensedmatt/nmr/conference_january2014/'>NMR Crystallography: Combining Experiment and Calculation</a>, University of Warwick, 14<sup>th</sup> January 2014.
         </li>
+        <li>
+          <strong>Election lessons</strong><br/>
+          <a href='http://www.opentech.org.uk/events/opentech2010/schedule/'>OpenTech</a>, ULU, Malet St, London, 11<sup>th</sup> September 2010.
+        </li>
       </ul>
+
+      <h2>Academic code</h2>
+
+      <h3>CASTEP</h3>
+      <p><a class='link' href='http://www.castep.org/' target="_blank">CASTEP</a> is a leading <abbr title="density functional theory">DFT</abbr> code for the calculation of a wide rage of material properties. I am a contributor to the core and the <abbr title="nuclear magnetic resonance">NMR</abbr> module, CASTEP-NMR.</p>
+
+      <h3>MagresPython</h3>
+      <p><a class='link' href='/magres-python/'>MagresPython</a> is a library for processing the output of <em>ab-initio</em> magnetic resonance calculations. This is based on the <a href='http://www.ccpnc.ac.uk/pmwiki.php/CCPNC/Fileformat'>CCP-NC Magres file format</a>, which I developed with my supervisor during my thesis. The goal was to unify the output format of scientific software that calculates NMR parameters into a single, very simple format, allowing shared development of further tooling.</p>
+
+      <h3>Castepy</h3>
+      <p><a class='link' href='https://github.com/tfgg/castepy' target="_blank">Castepy</a> is a library for generating the input files and processing the output files of <a href='http://www.castep.org/'>CASTEP</a> calculations.</p>
+
+      <h2>Other projects</h2>
+
+      <h3>Democracy Club</h3>
+      <p><a class='link' href='http://democracyclub.org.uk/' target="_blank">Democracy Club</a> is a non-partisan voter engagement, micro-volunteering and crowdsourcing project that I helped co-found for the 2010 UK General Election, collaborating with a number of other websites to improve accountability and voter information.</p>
+
+      <p>It was restarted by a new group for the 2015 UK General Election as an umbrella project for non-partisan websites such as <a href='https://www.yournextmp.com/'>YourNextMP</a>, which crowdsourced the only openly licensed database (CC-BY-SA) of candidates.</p>
+
+      <p>For 2015, I helped gather data, administer things and write code. I personally ran my experimental website, <a href='https://www.electionmentions.com/'>ElectionMentions</a>, which uses the candidate database to track mentions of candidates in the national and local press &mdash; hoping to provide voters with better information about who their candidates are, what they've done, and what they've said.</p>
+
+      <p>In previous years, I also ran <a href='http://www.yournextpcc.com/'>YourNextPCC</a> (2012) and <a href='http://www.yournextmep.com/'>YourNextMEP</a> (2014) gathering candidate data for the Police and Crime Commissioner and European Parliament elections, respectively.</p>
 
       <h2>Publications</h2>
       <ul class='publications'>
