update front page

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ css: main.css
         <div style='clear:both;'></div>
       </ul>
 
-      <p class='block-highlight'>I'm an academic escapee. Until recently I was a post-doctoral research assistant at the <a href='http://www.ox.ac.uk/' target="_blank">University of Oxford</a> in the <a href='http://mml.materials.ox.ac.uk/' target="_blank">Materials Modelling Laboratory</a>.
+      <p class='block-highlight'>I work at <a href="https://deepmind.com/">Google DeepMind</a>. An academic escapee, I was previously a postdoc at the <a href='http://www.ox.ac.uk/' target="_blank">University of Oxford</a> in the <a href='http://mml.materials.ox.ac.uk/' target="_blank">Materials Modelling Laboratory</a>, where I also did my Ph.D. research.
 
-      <p>I did my Ph.D. thesis work in Oxford with <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a>, entitled <em><a href='/thesis/abstract/'>Prediction of NMR J-coupling in condensed matter</a></em>.</p>
+      <p>My research was supervised by <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a> and thesis entitled <em><a href='/thesis/abstract/'>Prediction of NMR J-coupling in condensed matter</a></em>.</p>
 
-      <p>My academic research interests include computational materials science, density functional theory, quantum chemistry, condensed matter and nuclear magnetic resonance.</p>
+      <p>My research interests include computational materials science, density functional theory, quantum chemistry, condensed matter and nuclear magnetic resonance.</p>
 
       <p>I also work on projects that seek to enhance democracy in the UK, generally trying to bring it into the 21<sup>st</sup> century! Recently this has included helping with <a href='https://www.yournextmp.com/'>YourNextMP</a> and personally building <a href='https://www.electionmentions.com'>ElectionMentions</a>, which has also doubled as a platform for trying to understand practical natural languge processing and machine learning.</p>
 
