--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ css: main.css
 
       <p>My research interests include computational materials science, density functional theory, quantum chemistry, condensed matter and nuclear magnetic resonance.</p>
 
-      <p>I also work on projects that seek to enhance democracy in the UK, generally trying to bring it into the 21<sup>st</sup> century! Recently this has included helping with <a href='https://www.yournextmp.com/'>YourNextMP</a> and personally building <a href='https://www.electionmentions.com'>ElectionMentions</a>, which has also doubled as a platform for trying to understand practical natural languge processing and machine learning.</p>
+      <p>I also work on projects that seek to enhance democracy in the UK, generally trying to bring it into the 21<sup>st</sup> century! Recently this has included helping with <a href='https://www.yournextmp.com/'>YourNextMP</a> and personally building <a href='https://www.electionmentions.com'>ElectionMentions</a>, which has also doubled as a platform for trying to understand practical natural language processing and machine learning.</p>
 
       <h2>Posts</h2>
       <ul class='publications'>
