update front page

--- a/index.html
+++ b/index.html
@@ -92,15 +92,24 @@ css: main.css
       <h2>Publications</h2>
       <ul class='publications'>
         <li>
-            <strong>Unusual Intermolecular “Through-Space” J Couplings in P–Se Heterocycles</strong> <a href='http://pubs.acs.org/doi/abs/10.1021/jacs.5b03353'>journal</a><br/>
-            Paula S. Camacho, Kasun S. A. Arachchige, Alexandra M. Z. Slawin, <span class='me'>Timothy F. G. Green</span>, Jonathan R. Yates, Daniel M. Dawson, John D. Woollins and Sharon E. Ashbrook. <em>J. Am. Chem. Soc.</em>, 2015, 137 (19), 6172&ndash;6175</li>
+            <div class="name"><a href="http://dx.doi.org/10.1016/j.ssnmr.2016.05.004">Visualization and processing of computed solid-state NMR parameters: MagresView and MagresPython</a></div>
+            <div class="journal"><em>Journal of Solid State Nuclear Magnetic Resonance</em>, 2016</a>
+            <div class="authors">Simone Sturniolo, <span class='me'>Timothy F.G. Green</span>, Robert M. Hanson, Miri Zilka, Keith Refson, Paul Hodgkinson, Steven P. Brown, Jonathan R. Yates</div>
         </li>
         <li>
-          <strong>Relativistic nuclear magnetic resonance J-coupling with ultrasoft pseudopotentials and the zeroth-order regular approximation.</strong> <a href='http://scitation.aip.org/content/aip/journal/jcp/140/23/10.1063/1.4882678'>journal</a> <a href='http://arxiv.org/abs/1403.0524'>arXiv</a><br/>
-          <span class='me'>Timothy F. G. Green</span> and Jonathan R. Yates. <em>J. Chem. Phys.</em>, 2014, 140, 234106</li>
+            <div class="name"><a href='http://pubs.acs.org/doi/abs/10.1021/jacs.5b03353'>Unusual Intermolecular “Through-Space” J Couplings in P–Se Heterocycles</a></div>
+            <div class="journal"><em>J. Am. Chem. Soc.</em>, 2015, 137 (19), 6172&ndash;6175</div>
+            <div class="authors">Paula S. Camacho, Kasun S. A. Arachchige, Alexandra M. Z. Slawin, <span class='me'>Timothy F. G. Green</span>, Jonathan R. Yates, Daniel M. Dawson, John D. Woollins and Sharon E. Ashbrook.</div>
+        </li>
         <li>
-          <strong>Elucidation of the Al/Si Ordering in Gehlenite Ca<sub>2</sub>Al<sub>2</sub>SiO<sub>7</sub> by Combined <sup>29</sup>Si and <sup>27</sup>Al NMR Spectroscopy/Quantum Chemical Calculations.</strong> <a href='http://pubs.acs.org/doi/full/10.1021/cm3016935'>journal</a><br/>
-          Pierre Florian, Emmanuel Veron, <span class='me'>Timothy F. G. Green</span>, Jonathan R. Yates, and Dominique Massiot. <em>Chem. Mater.</em>, 2012, 24 (21), 4068&ndash;4079
+            <div class="name"><a href='http://scitation.aip.org/content/aip/journal/jcp/140/23/10.1063/1.4882678'>Relativistic nuclear magnetic resonance J-coupling with ultrasoft pseudopotentials and the zeroth-order regular approximation</a></div>
+            <div class="journal"><em>J. Chem. Phys.</em>, 2014, 140, 234106, <a href='http://arxiv.org/abs/1403.0524'>arXiv</a></div>
+            <div class="authors"><span class='me'>Timothy F. G. Green</span> and Jonathan R. Yates.</div>
+        </li>
+        <li>
+            <div class="name"><a href='http://pubs.acs.org/doi/full/10.1021/cm3016935'>Elucidation of the Al/Si Ordering in Gehlenite Ca<sub>2</sub>Al<sub>2</sub>SiO<sub>7</sub> by Combined <sup>29</sup>Si and <sup>27</sup>Al NMR Spectroscopy/Quantum Chemical Calculations</a></div>
+            <div class="journal"><em>Chem. Mater.</em>, 2012, 24 (21), 4068&ndash;4079</div>
+            <div class="authors">Pierre Florian, Emmanuel Veron, <span class='me'>Timothy F. G. Green</span>, Jonathan R. Yates, and Dominique Massiot.</div>
         </li>
       </ul>
     </div>
