Actually put the link in.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ css: main.css
       <h2>Publications</h2>
       <ul class='publications'>
         <li>
-            <div class="name"><a href="">Investigating Unusual Homonuclear Intermolecular “Through-Space” J Couplings in Organochalcogen Systems</a></div>
+            <div class="name"><a href="http://dx.doi.org/10.1021/acs.inorgchem.6b01121">Investigating Unusual Homonuclear Intermolecular “Through-Space” J Couplings in Organochalcogen Systems</a></div>
             <div class="journal"><em>Inorganic Chemistry</em>, 2016</a>
             <div class="authors">Paula Sanz Camacho, David McKay, Daniel M. Dawson, Christin Kirst, Jonathan R. Yates, <span class='me'>Timothy F.G. Green</span>, David B. Cordes, Alexandra M.Z. Slawin, J. Derek Woollins, Sharon E. Ashbrook</div>
         </li>
