Add recent publications.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@ css: main.css
       <h2>Publications</h2>
       <ul class='publications'>
         <li>
+            <div class="name"><a href="https://arxiv.org/abs/1711.09846">Population Based Training of Neural Networks</a></div>
+            <div class="journal"><em>arXiv</em>, 2017</a>
+            <div class="authors">Max Jaderberg, Valentin Dalibard, Simon Osindero, Wojciech M Czarnecki, Jeff Donahue, Ali Razavi, Oriol Vinyals, <span class='me'>Tim Green</span>, Iain Dunning, Karen Simonyan, Chrisantha Fernando, Koray Kavukcuoglu</div>
+        </li>
+        <li>
+            <div class="name"><a href="https://arxiv.org/abs/1705.06950">The kinetics human action video dataset</a></div>
+            <div class="journal"><em>arXiv</em>, 2017</a>
+            <div class="authors">Will Kay, Joao Carreira, Karen Simonyan, Brian Zhang, Chloe Hillier, Sudheendra Vijayanarasimhan, Fabio Viola, <span class='me'>Tim Green</span>, Trevor Back, Paul Natsev, Mustafa Suleyman, Andrew Zisserman</div>
+        </li>
+        <li>
             <div class="name"><a href="http://dx.doi.org/10.1021/acs.inorgchem.6b01121">Investigating Unusual Homonuclear Intermolecular “Through-Space” J Couplings in Organochalcogen Systems</a></div>
             <div class="journal"><em>Inorganic Chemistry</em>, 2016</a>
             <div class="authors">Paula Sanz Camacho, David McKay, Daniel M. Dawson, Christin Kirst, Jonathan R. Yates, <span class='me'>Timothy F.G. Green</span>, David B. Cordes, Alexandra M.Z. Slawin, J. Derek Woollins, Sharon E. Ashbrook</div>
