--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ css: main.css
         <div style='clear:both;'></div>
       </ul>
 
-      <p class='block-highlight'>I work at <a href="https://deepmind.com/">Google DeepMind</a> as a Resarch Engineer. I was previously a postdoc at the <a href='http://www.ox.ac.uk/' target="_blank">University of Oxford</a> in the <a href='http://mml.materials.ox.ac.uk/' target="_blank">Materials Modelling Laboratory</a>, where I also did my Ph.D. research.
+      <p class='block-highlight'>I work at <a href="https://deepmind.com/">Google DeepMind</a> as a Research Engineer. I was previously a postdoc at the <a href='http://www.ox.ac.uk/' target="_blank">University of Oxford</a> in the <a href='http://mml.materials.ox.ac.uk/' target="_blank">Materials Modelling Laboratory</a>, where I also did my Ph.D. research.
 
       <p>My research was supervised by <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a> and my thesis was entitled <em><a href='/thesis/abstract/'>Prediction of NMR J-coupling in condensed matter</a></em>. My research interests included computational materials science, density functional theory, quantum chemistry, condensed matter and nuclear magnetic resonance.</p>
 
