--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ css: main.css
 
       <p>My research was supervised by <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a> and my thesis was entitled <em><a href='/thesis/abstract/'>Prediction of NMR J-coupling in condensed matter</a></em>. My research interests included computational materials science, density functional theory, quantum chemistry, condensed matter and nuclear magnetic resonance.</p>
 
-      <p>I was also co-founder of <a href="https://democracyclub.org.uk/" target="_blank">Democracy Club</a>, an effort to improve UK citizen's experience of democracy using technology.</p>
+      <p>I was also co-founder of <a href="https://democracyclub.org.uk/" target="_blank">Democracy Club</a>, an effort to improve UK citizens' experience of democracy using technology.</p>
       
       <h2>Publications</h2>
       <ul class='publications'>
