--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@ css: main.css
       <h2>Publications</h2>
       <ul class='publications'>
         <li>
+            <div class="name"><a href="https://arxiv.org/abs/1807.01281">Human-level performance in first-person multiplayer games with population-based deep reinforcement learning</a></div>
+            <div class="journal"><em>arXiv</em>, 2018</a>
+            <div class="authors">Max Jaderberg, Wojciech M. Czarnecki, Iain Dunning, Luke Marris, Guy Lever, Antonio Garcia Castaneda, Charles Beattie, Neil C. Rabinowitz, Ari S. Morcos, Avraham Ruderman, Nicolas Sonnerat, <span class='me'>Tim Green</em>, Louise Deason, Joel Z. Leibo, David Silver, Demis Hassabis, Koray Kavukcuoglu, Thore Graepel</div>
+        </li>
+        <li>
             <div class="name"><a href="https://arxiv.org/abs/1711.09846">Population Based Training of Neural Networks</a></div>
             <div class="journal"><em>arXiv</em>, 2017</a>
             <div class="authors">Max Jaderberg, Valentin Dalibard, Simon Osindero, Wojciech M Czarnecki, Jeff Donahue, Ali Razavi, Oriol Vinyals, <span class='me'>Tim Green</span>, Iain Dunning, Karen Simonyan, Chrisantha Fernando, Koray Kavukcuoglu</div>
